<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1d1e20">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_alignTop="@id/shop"
            android:layout_alignBottom="@+id/shop"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:tint="#FFFFFF" />

        <ImageView
            android:id="@+id/shop"
            android:layout_width="260dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="-32dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/welc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_alignStart="@+id/logo"
            android:layout_marginTop="25dp"
            android:text="Life is hard enough already,"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/welcf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welc"
            android:layout_alignStart="@+id/logo"
            android:text="Let us make it,"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/welcf1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcf"
            android:layout_alignStart="@+id/logo"
            android:text="Just a little bit easier"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcf1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            android:padding="10dp"
            android:text="Login"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:text="I don't have an account"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fpass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:hint="@string/password"
                android:textColorHint="#FFFFFF"
                app:boxStrokeColor="#FFFFFF"
                app:boxStrokeErrorColor="#FFFFFF"
                app:errorTextColor="#FFFFFF"
                app:hintTextColor="#FFFFFF"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editText1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:focusable="true"
                android:hint="@string/email"
                android:textColorHint="#FFFFFF"
                app:boxStrokeColor="#FFFFFF"
                app:boxStrokeErrorColor="#FFFFFF"
                app:errorTextColor="#FFFFFF"
                app:hintTextColor="#FFFFFF">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#3343A7"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText2"
                android:layout_alignEnd="@+id/editText2"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_password"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>